ex 7 upload