@@ -1,5 +1,6 @@
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 
 public class SizeComparisonStrategy implements ComparisonStrategy {
@@ -18,7 +19,9 @@ public class SizeComparisonStrategy implements ComparisonStrategy {
         }
     }
     private int getHtmlSize(String urlString) throws Exception {
-        URL url = new URL(urlString);
+        URI uri = URI.create(urlString);
+        URL url = uri.toURL();
+        
         BufferedReader in = new BufferedReader(
             new InputStreamReader(url.openStream()));
 
