@@ -1,5 +1,6 @@
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 
 public class TextComparisonStrategy implements ComparisonStrategy {
@@ -20,7 +21,8 @@ public class TextComparisonStrategy implements ComparisonStrategy {
     }
 
     private String extractVisibleText(String urlString) throws Exception {
-        URL url = new URL(urlString);
+        URI uri = URI.create(urlString);
+        URL url = uri.toURL();
         BufferedReader in = new BufferedReader(
             new InputStreamReader(url.openStream()));
 
